# OneDrive_Enterprice_Monitor

./: .gitignore  DEVELOPMENT.md  MANUAL_TESTS.md  MANUAL_TESTS_CHECKLIST.md  README.md  TEST_CHECKLIST.md  VERIFICATION_CHECKLIST.md  all_windows.txt  attrib_log.txt  config.yaml  debug_columns.py  debug_processes.py  debug_registry.py  debug_tray.py  dummy_auth_window.py  list_config_files.py  main.py  onedrive_files.txt  onedrive_monitor.db  onedrive_registry.txt  perplexity.md  pyproject.toml  refresh_tray.py  requirements.txt  run_monitor.bat  run_monitor.sh  shell_output.txt  shell_status_test.txt  test_all_templates.py  test_attrib_monitor.py  test_email.py  test_email_scenarios.py  test_integration.py  test_notification_matrix.py  test_notifications.py  test_scenarios.py  test_shell_com.py  test_shell_status.ps1  test_tray.ps1  tray_debug_output.txt  (+5 more)
src/: __init__.py  main.py  main_clean.py
src/dashboard/: main.py
src/monitor/: __init__.py  alerter.py  checker.py  main.py  remediator.py
src/shared/: config.py  database.py  notifier.py  schemas.py  templates.py
src/shared/templates/: auth_required.html  error.html  not_found.html  not_running.html  ok.html  paused.html  resolved.html  syncing.html  unknown.html
