[project]
name = "onedrive-business-monitor"
version = "1.2.0"
description = "Enterprise OneDrive for Business monitoring system with notifications and dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "pywinauto>=0.6.9",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "pywin32>=308",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
onedrive_business = "src.main:cli"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ruff>=0.14.12",
]
